tests/parsing/invalid_type_name/stderr.golden
error: unexpected 'mask', expected identifier
bus.fbd +1:6
   |
 1 | type mask mask
   |      ^^^^
